# TerraMinal

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  main.cpp  test_sprite.tms
.github/workflows/: codeql-analysis.yml
components/: Component.cpp  Component.h  Scene.cpp  Scene.h
con_script/: ConFunction.cpp  ConFunction.h  ConLocation.cpp  ConLocation.h  ConRegs.h  Logical.h
con_script/data/: Scope.h  Stack.cpp  Stack.h
con_script/ops/: ConOp.cpp  ConOp.h  ConOpType.cpp  ConOpType.h
con_script/ops/control/: ConCall.cpp  ConCall.h  ConCondition.cpp  ConCondition.h  ConMove.cpp  ConMove.h
con_script/ops/cpp/: ConFunc.cpp  ConFunc.h
con_script/ops/int/: ConOpAdd.cpp  ConOpAdd.h
con_script/ops/int_map/: ConIntMapGet.cpp  ConIntMapGet.h  ConIntMapSet.cpp  ConIntMapSet.h
con_script/ops/scope/: ConEnterScope.cpp  ConEnterScope.h  ConEnterWeakScope.cpp  ConEnterWeakScope.h  ConExistVar.cpp  ConExistVar.h  ConExitScope.cpp  ConExitScope.h
con_script/ops/vector/: ConVectorGet.cpp  ConVectorGet.h  ConVectorSet.cpp  ConVectorSet.h
engine/: Engine.cpp  Engine.h  Letter.h  Position.h  Screen.cpp  Screen.h  World.cpp  World.h  defines.h
exceptions/: any_exception.h
exceptions/con_script/: stack_exception.h
io/: InputManager.cpp  InputManager.h
io/collectors/: InputCollectorBase.cpp  InputCollectorBase.h
io/collectors/windows/: KeyboardMapping.cpp  KeyboardMapping.h  WindowsConsoleInputCollector.cpp  WindowsConsoleInputCollector.h
io/controllers/: InputControllerBase.h
io/controllers/windows/: WindowsKeyboardInputController.cpp  WindowsKeyboardInputController.h  WindowsMouseInputController.cpp  WindowsMouseInputController.h
io/managers/: InputManagerBase.cpp  InputManagerBase.h  ManagerNames.cpp  ManagerNames.h
io/managers/focus/: FocusInputManager.cpp  FocusInputManager.h
loader/: Loader.cpp  Loader.h
loader/SpriteLoader/: ParsedState.h  SpriteLoader.cpp  SpriteLoader.h  SpriteLoader1.cpp  SpriteLoader1.h  SpriteLoaderBase.h  SubLoaderBase.cpp  SubLoaderBase.h
logger/: Log.h  Logger.cpp  Logger.h
logger/log_filter/: LambdaLogFilter.cpp  LambdaLogFilter.h  LogFIlter.h  TrueLogFilter.cpp  TrueLogFilter.h
logger/log_formatter/: LineLogFormatter.cpp  LineLogFormatter.h  LogFormatter.h
logger/log_writer/: FileLogWriter.cpp  FileLogWriter.h  LogWriter.h
renderable/: Animation.cpp  Animation.h  Frame.cpp  Frame.h  GraphicBuffers.h  Renderable.h  RenderableConsts.h  RenderableState.cpp  RenderableState.h  Sprite.cpp  Sprite.h
utils/: IdGenerator.h  call.h  context.h  property.h  string_converter.h  unicode.cpp  unicode.h
(+15 files in other folders)
